fix: fix aside items alignment

--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -2,7 +2,7 @@
   width: 95%;
   // max-width: 710px;
   margin: 0 auto;
-  border: 1px solid green;
+  // border: 1px solid green;
 
   @media (min-width: $large) {
     width: 100%;
