--- a/src/scss/layout/_aside.scss
+++ b/src/scss/layout/_aside.scss
@@ -1,13 +1,18 @@
 .aside {
+  // border: 1px solid saddlebrown;
   @media (min-width: $large) {
     margin-right: 3.2em;
+  }
+
+  .food-sense-logo {
+    align-self: center;
   }
 
   .container-main {
     .container {
       display: flex;
       flex-direction: column-reverse;
-      align-items: center;
+      align-items: flex-start;
 
       @media (min-width: $small) {
         flex-direction: row;
