--- a/src/scss/layout/_general_layout.scss
+++ b/src/scss/layout/_general_layout.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   // max-width: 896px;
   margin: 0 auto;
-  border: 1px solid salmon;
+  // border: 1px solid salmon;
 
   // @media (min-width: $medium) {
   //   max-width: 896px;
@@ -16,7 +16,7 @@
 }
 
 .container-flex {
-  border: 1px solid maroon;
+  // border: 1px solid maroon;
   @media (min-width: $large) {
     display: flex;
     // max-width: 896px;
